test/expected/explain_fvi_v.out
explain void f( void, int )
                ^
17: error: "void" must be only parameter if specified
